# gazebo-plugin-example

./: .gitignore  Dockerfile  README.md
odometer/: .gitignore  CMakeLists.txt  odometer.sdf
odometer/src/: CMakeLists.txt
odometer/src/odometry_plugin/: CMakeLists.txt  OdometerSystem.cc
odometer/src/odometry_sensor/: CMakeLists.txt  Odometer.cc
